# 20250302.dagster_test

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dagster_test/: definitions.py  local_fileprocess_20250304.py
