[project]
name = "dagster_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_test.definitions"
code_location_name = "dagster_test"

[tool.setuptools.packages.find]
exclude=["dagster_test_tests"]
